# microchip-fpga

./: .gitattributes  README.md  install.md  libero_finish_install.sh  libero_install_userguide.md  libero_lmgrd_run.sh  libero_patch.sh
hls/: README.md  run-pytest.sh  test-user.py
hls/include/common/: common.hpp  line_buffer.hpp  opencv_utils.hpp  params.hpp  test_utils.hpp  utils.hpp
hls/include/imgproc/: canny.hpp  debayer.hpp  format_conversions.hpp  gaussian_blur.hpp  hysteresis.hpp  nonmaximum_suppression.hpp  sobel.hpp  sobel_direction.hpp
hls/include/interface/: axi_mm_intf.hpp  axis_video.hpp
hls/prj-01/: Makefile  main.cpp
hls/prj-02/: Makefile  main.cpp
hls/prj-03/: Makefile  sobel.cpp
hls/prj-04/: Makefile
hls/prj-alpha_blend/: README.md  alpha_blend.cpp
hls/prj-axi-target/: CMakeLists.txt  Makefile  README.md  TestBenchConfig.h  axi-target.h  build-cmake.sh  config-InputData.h  config-OutputData.h  config-TPL.h  config.tcl  rtl-block1.cpp  rtl-block1.h  rtl-block2.cpp  rtl-block2.h  rtl-main.cpp  rtl-main.h  rtl-utils.cpp  rtl-utils.h  tb-main.cpp  tb-main.h  tb_main.h  utils.cpp  utils.h
hls/prj-axi-target2/: axi-target.h  axis.h  tb-main.cpp
hls/prj-axi-width-convert/: Makefile  README.md  axi_width_convert.cpp
hls/prj-axis-video-ddr-mover/: .clang-format  CMakeLists.txt  Makefile  README.md  axis_video_ddr_tb.cpp  build-shls.sh  cosim_wave.do
hls/prj-canny/: CMakeLists.txt  README.md  bmp.hpp  build-shls.sh  canny.cpp  define.hpp  gaussian_filter.cpp  hysteresis_filter.cpp  sobel_filter.cpp  util.cpp
hls/prj-canny-fifo-switch/: Makefile  README.md  axi-target.h  axis.h  canny.cpp  define.hpp  gaussian_filter.cpp  gf_sw.cpp  hf_sw.cpp  hysteresis_filter.cpp  nm_sw.cpp  nonmaximum_suppression.cpp  rtl-canny.cpp  rtl-canny.h  sf_sw.cpp  sobel_filter.cpp  tb-canny.cpp
hls/prj-debayer/: CMakeLists.txt  Makefile  README.md  debayer.cpp
hls/prj-gaussian-fifo-pipelined/: CMakeLists.txt  Makefile  README.md  gaussian_filter.cpp
hls/prj-gaussian-memory-interface/: Makefile  README.md  build-cmake.sh  gaussian_filter.cpp
hls/prj-gaussian-memory-interface-pipelined/: Makefile  README.md  gaussian_filter.cpp
hls/prj-pattern_generator/: CMakeLists.txt  Makefile  README.md  define.hpp  pattern_generator.cpp
hls/prj-pipeline-hazards/: CMakeLists.txt  Makefile  README.md  pipeline_hazards.cpp
hls/prj-rgb2ycbcr/: CMakeLists.txt  README.md  RGB2YCbCr.cpp
hls/prj-simple/: CMakeLists.txt  Makefile  README.md  main.cpp  run-shls.sh
hls/prj-simple-axis/: BlockBase.h  CMakeLists.txt  Makefile  ParsingComLine.cpp  ParsingComLine.h  README.md  ReadConfig.cpp  ReadConfig.h  ReadFileData.cpp  ReadFileData.h  axis_tb.cpp  block_1.cpp  block_2.h  config-modules.toml  config-tb.toml  rtl-common.h  rtl-main.cpp  rtl-main.h  tb-main.cpp
hls/prj-simple-pipeline/: CMakeLists.txt  Makefile  README.md  axi-regs.h  axis.h  build-cmake.sh  config-InputData.h  config-OutputData.h  config-REG.h  hls-main-tmp.cpp  hls-main.cpp  hls-main.h  sim_wave.do  tb-hls-main.cpp  utils.cpp
hls/prj-simple-pipeline/sim/: tb_axi_slave.do  tb_axi_slave.sv  tb_axi_slave_wave.do  tb_wire.do  tb_wire.sv  tb_wire_wave.do
hls/prj-simple-toml/: CMakeLists.txt  README.md  ReadConfig.h  block_1.h  block_2.cpp  build-cmake.sh  build-shls.sh  config-modules.toml  install_lib.sh  main.cpp  parsingComLine.cpp  parsingComLine.h
hls/prj-sobel/: CMakeLists.txt  Makefile  README.md  sobel.cpp
hls/prj-video-path/: Makefile  main.cpp  parsingComLine.cpp  parsingComLine.h
hls/prj-ycbcr2rgb/: README.md  YCbCr2RGB.cpp
hls/pytests/: pytest.ini  test-user.py
hls/scripts/: img2raw.py  raw2avi.py  raw_view.py
hls/test/: test_prj.py
hls/test-01/: Makefile  main.cpp  run-test.sh
hls/test-02/: Makefile  run-test.sh
